# dumpbin-bug

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/source/TheProgram/: main.cpp
lib1/: CMakeLists.txt
lib1/include/Child/: main_lib.h
lib1/source/Child/: main_lib.cpp
lib2/: CMakeLists.txt
lib2/include/GrandChild/: main_lib.h
lib2/source/GrandChild/: main_lib.cpp
